--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,36 +5,42 @@
     </mat-card-header>
     <mat-card-content>
       <form class="login-form" [formGroup]="loginForm" (ngSubmit)="onSubmitLogin()">
+
         <mat-form-field>
           <mat-label>אימייל</mat-label>
           <input matInput type="email" formControlName="email" placeholder="הכנס את האימייל שלך">
+          @if (loginForm.get('email')?.touched && loginForm.get('email')?.hasError('required')) {
+            <mat-error>שדה האימייל הוא חובה.</mat-error>
+          }
+          @if (loginForm.get('email')?.touched && loginForm.get('email')?.hasError('email')) {
+            <mat-error>פורמט האימייל אינו תקין.</mat-error>
+          }
         </mat-form-field>
 
-        <mat-form-field >
+        <mat-form-field>
           <mat-label>סיסמה</mat-label>
           <input matInput type="password" formControlName="password" placeholder="הכנס את הסיסמה שלך">
+          @if (loginForm.get('password')?.touched && loginForm.get('password')?.hasError('required')) {
+            <mat-error>שדה הסיסמה הוא חובה.</mat-error>
+          }
         </mat-form-field>
 
-        <a mat-button color="accent" [routerLink]="['/register']" class="switch-form-link">למשתמש חדש</a>
+        @if (errorMessage()) {
+          <div class="overall-error">
+            {{ errorMessage() }}
+          </div>
+        }
+
+        <a [routerLink]="['/register']" class="switch-form-link">למשתמש חדש</a>
 
         <button mat-raised-button color="primary" type="submit" [disabled]="loginForm.invalid || isSubmitting()">
-          <ng-container *ngIf="isSubmitting(); else elseBlock">
+          @if (isSubmitting()) {
             <span>טוען...</span>
-          </ng-container>
-          <ng-template #elseBlock>
-            כניסה
-          </ng-template>
+          } @else {
+            <span>כניסה</span> 
+          }
         </button>
       </form>
     </mat-card-content>
   </mat-card>
 </div>
-
-<ng-container *ngIf="errorMessage()">
-  <div class="overall-error">
-    {{ errorMessage() }}
-  </div>
-</ng-container>
-
-
- 
