--- a/src/app/courses/edit-course/edit-course.component.html
+++ b/src/app/courses/edit-course/edit-course.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
-<div class="course-form-wrapper"> <mat-card class="form-card"> <mat-card-header>
+<div class="course-form-wrapper"> <mat-card class="form-card">
       <mat-card-title>ערוך קורס</mat-card-title>
-    </mat-card-header>
+
 
     <mat-card-content>
       @if (errorMessage()) {
